<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">水晶球财经</string>
    <string name="action_settings">Settings</string>
    <!--自定义控件的属性-->
    <declare-styleable name="PagerSlidingTabStrip">
        <attr name="pstsIndicatorColor" format="color" />
        <attr name="pstsUnderlineColor" format="color" />
        <attr name="pstsDividerColor" format="color" />
        <attr name="pstsIndicatorHeight" format="dimension" />
        <attr name="pstsUnderlineHeight" format="dimension" />
        <attr name="pstsDividerPadding" format="dimension" />
        <attr name="pstsTabPaddingLeftRight" format="dimension" />
        <attr name="pstsScrollOffset" format="dimension" />
        <attr name="pstsTabBackground" format="reference" />
        <attr name="pstsShouldExpand" format="boolean" />
        <attr name="pstsTextAllCaps" format="boolean" />
        <attr name="selectedTabTextColor" format="color" />
    </declare-styleable>
    <!--自定义控件的属性-->
    <declare-styleable name="MarqueeViewStyle">
        <attr name="mvInterval" format="integer|reference" />
        <attr name="mvAnimDuration" format="integer|reference" />
        <attr name="mvTextSize" format="dimension|reference" />
        <attr name="mvTextColor" format="color|reference" />
    </declare-styleable>

    <!-- 内存管理 -->

    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>

    <!-- 写博文页面的字 -->
    <string name="input_number_words">你可以输入140字</string>
    <string name="share_fresh_tings">分享新鲜事...</string>
    <string name="bowen_bi1">用户需输入</string>
    <string name="bowen_bi2">水晶币可看正文</string>
    <string name="reward_explain">本文是付费文章，打赏后可见正文</string>
    <string name="system_message">打赏消息</string>
    <string name="shuijinbi_explain">已有 0 人打赏共 0 水晶币</string>
    <string name="more">更多>></string>
    <string name="crystal_bwater">水晶币流动</string>
    <string name="agreement">《付费阅读协议》</string>
    <string name="reward_list">打赏列表</string>

    <!-- 刷新时的值 -->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="see_more">查看更多</string>

    <string name="recharge_sjb_sm">水晶币可用于订阅和打赏博文</string>
    <string name="recharge_sjb_sm1">1元=10水晶币</string>

    <!-- WXPayEntryActivity -->

    <string name="subscribe_str">订阅后你将即时收到“Ta”的交易动态消息，让你不错过任何赚钱机会。（投资有风险，此项业务发送的消息不构成投资建议）</string>

    <string name="plan_explain">计划发布后下个交易日开盘价作为起算价，并开始判断是否达标</string>

    <string-array name="turn_type">
        <item>银行转证券</item>
        <item>证券转银行</item>
    </string-array>
</resources>
