<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff">

    <LinearLayout
        android:id="@+id/downlinear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/downlinear3"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/color_toptitle">

            <include
                layout="@layout/head_back_reuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bowen_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="付费文章"
                    style="@style/top_title" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/addlongweibo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="发布"
                    android:textColor="@color/color_ffffff"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>

        <EditText
            android:id="@+id/editcomtitleforweibo1"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:maxLength="60"
            android:layout_marginLeft="10dp"
            android:background="@color/color_ffffff"
            android:hint="标题"
            android:textColorHint="@color/color_999999"
            android:textCursorDrawable="@drawable/color_cursor"/>

        <View
            android:id="@+id/title_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>

        <RelativeLayout
            android:id="@+id/summary_rel"
            android:layout_width="wrap_content"
            android:layout_height="68dp">

            <EditText
                android:id="@+id/summary_edi"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_ffffff"
                android:textCursorDrawable="@drawable/color_cursor"
                android:gravity="top"
                android:hint="摘要（公开可见）"
                android:lines="2" />

            <TextView
                android:id="@+id/input_number_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/summary_edi"
                android:text="@string/input_number_words"
                android:textColor="@color/color_999999"
                android:layout_marginRight="5dp"
                android:textSize="12sp" />

        </RelativeLayout>

        <View
            android:id="@+id/gaishu_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- 富文本编辑器 -->
            <com.example.sjqcjstock.richeditor.RichTextEditor
                android:id="@+id/richEditor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:fillViewport="false" />

            <TextView
                android:id="@+id/share_fresh_tings_tx"
                style="@style/EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_ffffff"
                android:text="@string/share_fresh_tings"
                android:textColor="@color/color_999999"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/downlinear3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/downlinear2"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/bowen_bi1" />

        <EditText
            android:id="@+id/rystal_coin_edi"
            android:layout_width="35dp"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:background="@drawable/bg_edittext"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/bowen_bi2" />

        <CheckBox
            android:id="@+id/weibo_agreement_ck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/color_text1"
            android:checked="true"
            android:drawableLeft="@drawable/check_box_style"
            android:drawablePadding="3dp"
            android:button="@null"
            android:text="同意"/>

        <TextView
            android:id="@+id/weibo_agreement_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/color_toptitle"
            android:text="@string/agreement"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/downlinear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <!-- 付费文章、图片、@、拍照、表情 -->
        <RelativeLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_ededed"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="visible">

            <Button
                android:id="@+id/toshortweibo1"
                android:layout_width="72dp"
                android:layout_height="30dp"
                android:background="@color/color_toptitle"
                android:text="写短文"
                android:textColor="@color/color_ffffff"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/atsb2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/getimgtotakephoto1"
                android:src="@mipmap/atsbicon1" />

            <ImageView
                android:id="@+id/facelibrary1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@mipmap/facelibrary1"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/getimgtoalbum1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/atsb2"
                android:src="@mipmap/getimg1" />

            <ImageView
                android:id="@+id/getimgtotakephoto1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/facelibrary1"
                android:src="@mipmap/takephoto1" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_line"/>

        <!-- 表情的GridView -->
        <GridView
            android:id="@+id/facegridView1"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@color/white"
            android:numColumns="5"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>